terraform/kubernetes/06-worker-scaledobject.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: job-scheduler
  labels:
    app: worker
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9091"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      nodeSelector:
        "node-role": worker
      containers:
      - name: worker
        image: YOUR_ECR_REGISTRY/job-scheduler-worker:latest
        ports:
        - name: metrics
          containerPort: 9091
